2010-04-02  Nayan Kumar K  <nayankk@gmail.com>

Reviewed by Eric Seidel.

        Fix for WML enabled build failure.

        https://bugs.webkit.org/show_bug.cgi?id=36648

        * wml/WMLOptionElement.cpp:
        (WebCore::WMLOptionElement::disabled):
        * wml/WMLOptionElement.h:
        * wml/WMLSelectElement.cpp:
        (WebCore::WMLSelectElement::listBoxSelectItem):
        * wml/WMLSelectElement.h:

Canonical link: https://commits.webkit.org/48331@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57038 268f45cc-cd09-0410-ab3c-d52691b4dbfc